intro/ClusterIP-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  type: ClusterIP
  selector:
    glupialabelka: nginx4
  ports:
  - port: 8000
    targetPort: 80
