intro/LB-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
  namespace: student0
spec:
  selector:
    glupialabelka: nginx4
  ports:
    - port: 801
      targetPort: 80
  type: LoadBalancer
