intro/NodePort-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    glupialabelka: nginx4
  ports:
  - port: 800
    targetPort: 80
    nodePort: 30080
